<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_repeat"
    tools:context=".ui.signin.signup.RegistryStudentFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_registry_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cly_container_registry_step_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:visibility="visible"
        tools:visibility="gone"
       >

        <TextView
            android:id="@+id/tv_registry_first_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_registry_first_last_name"
            app:layout_constraintStart_toStartOf="@+id/et_registry_first_last_name"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_registry_first_last_name"
            style="@style/etRegistryTheme"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_registry_first_last_name" />


        <TextView
            android:id="@+id/tv_registry_second_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_registry_second_last_name"
            app:layout_constraintStart_toStartOf="@+id/et_registry_second_last_name"
            app:layout_constraintTop_toBottomOf="@+id/et_registry_first_last_name" />

        <EditText
            android:id="@+id/et_registry_second_last_name"
            style="@style/etRegistryTheme"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_registry_second_last_name" />


        <TextView
            android:id="@+id/tv_registry_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_registry_full_name"
            app:layout_constraintStart_toStartOf="@+id/et_registry_names"
            app:layout_constraintTop_toBottomOf="@+id/et_registry_second_last_name" />

        <EditText
            android:id="@+id/et_registry_names"
            style="@style/etRegistryTheme"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_registry_names" />


        <TextView
            android:id="@+id/tv_registry_id_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text__registry_id_student"
            app:layout_constraintStart_toStartOf="@+id/et_registry_id_student"
            app:layout_constraintTop_toBottomOf="@+id/et_registry_names" />

        <EditText
            android:id="@+id/et_registry_id_student"
            style="@style/etRegistryTheme"
            android:inputType="numberSigned"
            android:maxLength="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_registry_id_student" />


        <TextView
            android:id="@+id/tv_registry_semester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text__registry_semester"
            app:layout_constraintStart_toStartOf="@+id/et_registry_semester"
            app:layout_constraintTop_toBottomOf="@+id/et_registry_id_student" />

        <EditText
            android:id="@+id/et_registry_semester"
            style="@style/etRegistryTheme"
            android:inputType="numberSigned"
            android:maxLength="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_registry_semester" />


        <TextView
            android:id="@+id/tv_registry_academic_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_registry_academic_program"
            app:layout_constraintStart_toStartOf="@+id/et_registry_semester"
            app:layout_constraintTop_toBottomOf="@+id/et_registry_semester" />

        <Spinner
            android:id="@+id/sp_registry_academic_program"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:entries="@array/careers"
            android:background="@drawable/selector_spinner_registry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_registry_academic_program" />

        <TextView
            android:id="@+id/tv_registry_init_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_registry_init_average"
            app:layout_constraintStart_toStartOf="@+id/sp_registry_academic_program"
            app:layout_constraintTop_toBottomOf="@+id/sp_registry_academic_program" />


        <EditText
            android:id="@+id/et_registry_init_average"
            style="@style/etRegistryTheme"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:maxLength="5"
            app:layout_constraintBottom_toBottomOf="@+id/tv_registry_init_average"
            app:layout_constraintEnd_toEndOf="@+id/sp_registry_academic_program"
            app:layout_constraintTop_toTopOf="@+id/tv_registry_init_average" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cly_container_registry_step_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <TextView
            android:id="@+id/tv_registry_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/text_registry_mail"
            app:layout_constraintStart_toStartOf="@+id/et_registry_mail"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_registry_mail"
            style="@style/etRegistryTheme"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_registry_mail" />


        <TextView
            android:id="@+id/tv_registry_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_registry_phone"
            app:layout_constraintStart_toStartOf="@+id/et_registry_mail"
            app:layout_constraintTop_toBottomOf="@+id/et_registry_mail" />

        <EditText
            android:id="@+id/et_registry_phone"
            style="@style/etRegistryTheme"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_registry_phone" />


        <TextView
            android:id="@+id/tv_registry_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_registry_turn"
            app:layout_constraintStart_toStartOf="@+id/et_registry_phone"
            app:layout_constraintTop_toBottomOf="@+id/et_registry_phone" />

        <Spinner
            android:id="@+id/sp_registry_turn"
            style="@style/etRegistryTheme"
            android:entries="@array/turns"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_registry_turn" />


        <TextView
            android:id="@+id/tv_registry_academic_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_registry_academic_student"
            app:layout_constraintStart_toStartOf="@+id/sp_registry_turn"
            app:layout_constraintTop_toBottomOf="@+id/sp_registry_turn" />

        <Spinner
            android:id="@+id/sp_registry_academic_student"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:entries="@array/academic_situtation"
            android:background="@drawable/selector_spinner_registry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_registry_academic_student" />

        <TextView
            android:id="@+id/tv_registry_scholarship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_registry_scholarship"
            app:layout_constraintStart_toStartOf="@+id/sp_registry_academic_student"
            app:layout_constraintTop_toBottomOf="@+id/sp_registry_academic_student" />


        <RadioGroup
            android:id="@+id/rg_registry_student_scholarship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/tv_registry_scholarship"
            app:layout_constraintTop_toBottomOf="@+id/tv_registry_scholarship">

            <RadioButton
                android:id="@+id/rb_registry_student_scholarship_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/text_registry_student_scholarship_yes" />

            <RadioButton
                android:id="@+id/rb_registry_student_scholarship_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/text_registry_student_scholarship_no" />


            <RadioButton
                android:id="@+id/rb_registry_student_scholarship_asp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/text_registry_student_scholarship_asp" />

        </RadioGroup>


        <TextView
            android:id="@+id/tv_registry_matters_owed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_registry_matters_owed"
            app:layout_constraintStart_toStartOf="@+id/tv_registry_scholarship"
            app:layout_constraintTop_toBottomOf="@+id/rg_registry_student_scholarship" />

        <EditText
            android:id="@+id/et_registry_matters_owed"
            style="@style/etRegistryTheme"
            android:inputType="numberSigned"
            android:maxLength="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_registry_matters_owed" />



        <TextView
            android:id="@+id/tv_registry_matters_owed_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_registry_matters_owed_name"
            app:layout_constraintStart_toStartOf="@+id/et_registry_matters_owed"
            app:layout_constraintTop_toBottomOf="@+id/et_registry_matters_owed" />

        <EditText
            android:id="@+id/et_registry_matters_owed_name"
            style="@style/etRegistryTheme"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:maxLines="8"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_registry_matters_owed_name" />



    </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cly_container_registry_step_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:visibility="gone"
                >

                <TextView
                    android:id="@+id/tv_registry_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="Contraseña"
                    app:layout_constraintStart_toStartOf="@+id/et_registry_password"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_registry_password"
                    style="@style/etRegistryTheme"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_registry_password" />


                <TextView
                    android:id="@+id/tv_registry_confirm_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Confirmar contraseña"
                    app:layout_constraintStart_toStartOf="@+id/et_registry_password"
                    app:layout_constraintTop_toBottomOf="@+id/et_registry_password" />

                <EditText
                    android:id="@+id/et_registry_confirm_password"
                    style="@style/etRegistryTheme"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_registry_confirm_password" />




            </androidx.constraintlayout.widget.ConstraintLayout>




        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



    <TextView
        android:id="@+id/tv_registry_footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorGrayFooter"
        android:gravity="center"
        android:text="@string/text_registry_footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_registry_footer"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingStart="30dp"
        android:src="@drawable/ic_arrow_next"
        app:layout_constraintBottom_toBottomOf="@+id/tv_registry_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_registry_footer" />


</androidx.constraintlayout.widget.ConstraintLayout>