<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_background"
    tools:context=".ui.login.LoginFragment">


    <ImageView
        android:id="@+id/iv_icon_login_upiicsa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_login_upiicsa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_login_tittle"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_icon_login_upiicsa"
        app:layout_constraintStart_toStartOf="@+id/iv_icon_login_upiicsa"
        app:layout_constraintTop_toBottomOf="@+id/iv_icon_login_upiicsa" />

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorGrayEditTexts"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_tittle" />




    <EditText
        android:id="@+id/et_login_pass"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorGrayEditTexts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_username" />


    <TextView
        android:id="@+id/tv_login_new_registry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_login_new_registry"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_login_pass"
        app:layout_constraintStart_toStartOf="@+id/et_login_pass"
        app:layout_constraintTop_toBottomOf="@+id/et_login_pass" />


    <Button
        android:id="@+id/btn_login_init"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_login_btn"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/shape_button_green"
        android:textColor="@android:color/white"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_new_registry" />




</androidx.constraintlayout.widget.ConstraintLayout>